--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "eslint-plugin-tailwindcss": "^3.6.0",
     "formik": "^2.2.9",
     "hamburger-react": "^2.5.0",
-    "next": "12.2.3",
+    "next": "^12.2.5",
     "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
